--- a/app/src/main/res/layout/songs.xml
+++ b/app/src/main/res/layout/songs.xml
@@ -5,14 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="10dp"
     android:layout_margin="10dp"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="10dp"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_margin="2dp"
+        android:layout_margin="4dp"
         >
 
         <LinearLayout
@@ -21,21 +21,19 @@
             android:orientation="horizontal"
             android:layout_margin="2dp"
             >
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:text="TrackId"
-                android:background="@drawable/round_corners_black"
-                />
+                android:text="TrackId  :- "
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="trackid"
-                android:id="@+id/textTrackId"
-                android:background="@drawable/round_corners_while"
+                android:id="@+id/TrackId"
+
                 />
 
         </LinearLayout>
@@ -44,23 +42,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="2dp"
+            android:layout_margin="4dp"
             >
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:text="TrackName"
+                android:text="TrackName  :-"
                 android:textStyle="bold"
-                android:background="@drawable/round_corners_black"
+
                 />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TrackName"
-                android:background="@drawable/round_corners_while"
-                android:id="@+id/textTrackName"
+
+                android:id="@+id/TrackName"
                 />
 
         </LinearLayout>
@@ -69,14 +66,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="2dp"
+            android:layout_margin="4dp"
             >
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textColor="#FFFFFF"
-                android:text="TrackTimeMillis"
-                android:background="@drawable/round_corners_black"
+                android:text="TrackTimeMillis  :-"
+                android:textStyle="bold"
                 />
 
             <TextView
@@ -84,8 +80,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="trackid"
-                android:id="@+id/textTrackTimeMillis"
-                android:background="@drawable/round_corners_while"
+                android:id="@+id/TrackTimeMillis"
+
                 />
 
         </LinearLayout>
@@ -94,14 +90,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="2dp"
+            android:layout_margin="4dp"
             >
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:text="PrimaryGenreName"
-                android:background="@drawable/round_corners_black"
+                android:text="PrimaryGenreName  :-"
+                android:textStyle="bold"
+
                 />
 
             <TextView
@@ -109,62 +105,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="trackid"
-                android:id="@+id/textPrimaryGenre"
-                android:background="@drawable/round_corners_while"
+                android:id="@+id/PrimaryGenre"
+
                 />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="2dp"
-            >
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:text="ArtistName"
-                android:background="@drawable/round_corners_black"
-                />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="trackid"
-                android:id="@+id/textArtistName"
-                android:background="@drawable/round_corners_while"
-                />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="2dp"
-            >
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
-                android:text="ArtistId"
-                android:background="@drawable/round_corners_black"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="trackid"
-                android:id="@+id/textArtistId"
-                android:background="@drawable/round_corners_while"
-                />
-
-        </LinearLayout>
 
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
+
