--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,26 +21,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:layout_margin="10dp"
-            android:weightSum="100"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/editSearch"
-                android:layout_width="314dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="75"
 
                 android:hint="Search Music" />
 
-            <ImageView
-                android:id="@+id/btnSearch"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/limit"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="25"
-                android:clickable="true"
-                android:src="@drawable/ic_baseline_search_24" />
+                android:layout_weight="75"
+                android:inputType="number"
+                android:hint="Limit default 25" />
+
+            <Button
+                android:text="Search"
+                android:id="@+id/btnSearch"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
 
         </LinearLayout>
@@ -54,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="No Result Found \n     Try Again"
+        android:text="No Result Found  Try Again"
         android:textSize="30dp"
         android:textStyle="bold"
         android:id="@+id/textError"
